--- a/app/src/main/res/layout/nav_header_education_hunt.xml
+++ b/app/src/main/res/layout/nav_header_education_hunt.xml
@@ -2,34 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:gravity="end"
     android:background="@drawable/side_nav_bar"
-    android:orientation="horizontal"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingLeft="5dp"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.2"
-        android:padding="5dp"
-        android:layout_marginTop="50dp"
-        android:src="@mipmap/ic_launcher" />
-
-    <ImageView
-        android:id="@+id/eduhunt"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.6"
-        android:padding="15dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginRight="30dp"
-        android:paddingRight="20dp"
-        android:paddingBottom="30dp"
-        android:src="@mipmap/edutext" />
+   <ImageView
+       android:id="@+id/headerImage"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:paddingRight="100dp"
+       android:paddingLeft="70dp"
+       android:paddingBottom="30dp"
+       android:paddingTop="40dp"
+       android:src="@mipmap/edutext"/>
 
 </LinearLayout>
