--- a/app/src/main/res/layout/nav_header_education_hunt.xml
+++ b/app/src/main/res/layout/nav_header_education_hunt.xml
@@ -3,17 +3,24 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
     android:background="@drawable/side_nav_bar"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
    <ImageView
        android:id="@+id/headerImage"
-       android:layout_width="wrap_content"
+       android:layout_width="0dp"
+       android:layout_weight="0.75"
        android:layout_height="wrap_content"
-       android:paddingRight="100dp"
-       android:paddingLeft="70dp"
-       android:paddingBottom="30dp"
-       android:paddingTop="40dp"
+       android:layout_marginLeft="50dp"
        android:src="@mipmap/edutext"/>
+
+   <ImageView
+       android:layout_width="0dp"
+       android:layout_weight="0.25"
+       android:layout_marginTop="7dp"
+       android:layout_height="wrap_content"
+       android:layout_gravity="center_vertical"
+       android:layout_marginRight="50dp"
+       android:src="@mipmap/ic_launcher"/>
 
 </LinearLayout>
