--- a/app/src/main/res/layout/custom_list.xml
+++ b/app/src/main/res/layout/custom_list.xml
@@ -17,7 +17,7 @@
             android:layout_weight="0.2"
             android:layout_gravity="center_vertical"
             android:layout_height="wrap_content"
-            android:src="@mipmap/xavier"/>
+            android:src="@mipmap/college"/>
 
         <LinearLayout
             android:layout_width="0dp"
