--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -1,8 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/image"
-    >
+    android:orientation="vertical"
+    android:background="@mipmap/splash">
 
-</RelativeLayout>
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        style="?android:attr/progressBarStyle"
+        android:layout_gravity="center"
+        android:layout_marginTop="340dp"
+        android:indeterminateDrawable="@drawable/circular"
+        android:max="100"
+        android:progress="200"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="12dp"
+        android:textColor="#f26c4f"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="140dp"
+        android:text="Powered By:"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:textSize="12dp"
+        android:textColor="#f26c4f"
+        android:text="Soani tech Pvt.Ltd" />
+
+</LinearLayout>
