--- a/app/src/main/res/menu/education_hunt.xml
+++ b/app/src/main/res/menu/education_hunt.xml
@@ -6,4 +6,9 @@
         android:orderInCategory="100"
         android:title="@string/our_team"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/feedback"
+        android:orderInCategory="100"
+        android:title="@string/feedback"
+        app:showAsAction="never" />
 </menu>
