--- a/app/src/main/res/layout/activity_school_registration.xml
+++ b/app/src/main/res/layout/activity_school_registration.xml
@@ -7,6 +7,6 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".Bookmark">
+    tools:context="com.example.user.educationhunt.SchoolRegistration">
 
 </RelativeLayout>
