--- a/app/src/main/res/layout/fragment_favourites.xml
+++ b/app/src/main/res/layout/fragment_favourites.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.user.educationhunt.Favourites">
+    tools:context=".fragment.Favourites">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
