--- a/app/src/main/res/drawable/btn_send.xml
+++ b/app/src/main/res/drawable/btn_send.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
     <corners
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"
+        android:topLeftRadius="3dp"
+        android:topRightRadius="3dp"
+        android:bottomLeftRadius="3dp"
+        android:bottomRightRadius="3dp"
         />
     <gradient
         android:angle="45"
         android:centerX="35%"
-        android:centerColor="@color/colorPrimary"
-        android:startColor="#E8E8E8"
-        android:endColor="#FF4500"
+        android:centerColor="#9ea830"
+        android:startColor="#9ea830"
+        android:endColor="#9ea830"
         android:type="linear"
         />
     <padding
@@ -21,7 +21,7 @@
         android:bottom="9dp"
         />
     <size
-        android:width="45dp"
-        android:height="11dp"
+        android:width="40dp"
+        android:height="8dp"
         />
 </shape>
