--- a/app/src/main/res/drawable/buttonshape.xml
+++ b/app/src/main/res/drawable/buttonshape.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
     <corners
-        android:topLeftRadius="100dp"
-        android:topRightRadius="100dp"
-        android:bottomLeftRadius="100dp"
-        android:bottomRightRadius="100dp"
+        android:topLeftRadius="18dp"
+        android:topRightRadius="18dp"
+        android:bottomLeftRadius="18dp"
+        android:bottomRightRadius="18dp"
         />
     <gradient
         android:angle="45"
         android:centerX="35%"
-        android:centerColor="#47A891"
-        android:startColor="#E8E8E8"
-        android:endColor="#000000"
+        android:centerColor="#BDB76B"
+        android:startColor="#BDB76B"
+        android:endColor="#BDB76B"
         android:type="linear"
         />
     <padding
@@ -21,11 +21,11 @@
         android:bottom="9dp"
         />
     <size
-        android:width="470dp"
-        android:height="120dp"
+        android:width="520dp"
+        android:height="140dp"
         />
     <stroke
-        android:width="3dp"
-        android:color="#878787"
+        android:width="8dp"
+        android:color="#dce0e8"
         />
 </shape>
