--- a/app/src/main/res/layout/activity_school.xml
+++ b/app/src/main/res/layout/activity_school.xml
@@ -6,11 +6,12 @@
     android:orientation="vertical"
     tools:context="com.example.user.educationhunt.School">
 
-    <EditText
-        android:id="@+id/txtSchool"
-        android:layout_marginTop="10dp"
-        android:layout_width="match_parent"
+    <ListView
+        android:id="@+id/list"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:hint="Search your school here"/>
+        android:divider="@color/list_divider"
+        android:dividerHeight="1dp"
+        android:listSelector="@drawable/list_row_selector" />
 
 </LinearLayout>
