--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -3,31 +3,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="20dp"
     android:background="#fff"
     tools:context=".fragment.Register">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:textSize="30dp"
-        android:layout_marginBottom="50dp"
-        android:textStyle="bold"
-        android:textColor="@color/colorPrimary"
-        android:text="Select Your Type" />
 
     <Button
         android:id="@+id/btn_school"
-
         android:text="Register your School here"
         android:textColor="#FFFFFF"
         android:textSize="14sp"
-
-        android:layout_width="320dp"
-        android:layout_height="70dp"
-        android:layout_marginBottom="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:background="@drawable/buttonshape"
         android:shadowColor="#A8A8A8"
         android:shadowDx="2"
@@ -37,15 +25,13 @@
 
     <Button
         android:id="@+id/btn_college"
-
         android:text="Register your college here"
         android:textColor="#FFFFFF"
         android:textSize="14sp"
-
-        android:layout_width="320dp"
-        android:layout_height="70dp"
-        android:layout_marginBottom="40dp"
-        android:background="@drawable/buttonshape"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="@drawable/btn_college_register"
         android:shadowColor="#A8A8A8"
         android:shadowDx="2"
         android:shadowDy="-2"
@@ -54,14 +40,13 @@
 
     <Button
         android:id="@+id/btn_university"
-
         android:text="Register your University here"
         android:textColor="#FFFFFF"
         android:textSize="14sp"
-
-        android:layout_width="320dp"
-        android:layout_height="70dp"
-        android:background="@drawable/buttonshape"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="@drawable/btn_university_register"
         android:shadowColor="#A8A8A8"
         android:shadowDx="2"
         android:shadowDy="-2"
