--- a/app/src/main/res/layout/activity_our_team.xml
+++ b/app/src/main/res/layout/activity_our_team.xml
@@ -43,63 +43,86 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:textColor="@color/colorPrimary"
-        android:textSize="16dp"
+        android:textSize="15dp"
         android:text="Project Manager"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:textSize="11dp"
-        android:layout_marginBottom="15dp"
+        android:textSize="10dp"
+        android:layout_marginBottom="10dp"
         android:text="John S. Chhetri"/>
     <View
         android:layout_width="1dp"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
         android:layout_gravity="center_horizontal"
         android:background="@color/colorPrimary"/>
     <TextView
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:textColor="@color/colorPrimary"
-        android:textSize="16dp"
+        android:textSize="15dp"
         android:text="UI Designer"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:textSize="11dp"
-        android:layout_marginBottom="15dp"
+        android:textSize="10dp"
+        android:layout_marginBottom="10dp"
         android:text="Priti Sharma"/>
     <View
         android:layout_width="1dp"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
         android:layout_gravity="center_horizontal"
         android:background="@color/colorPrimary"/>
     <TextView
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:textColor="@color/colorPrimary"
-        android:textSize="16dp"
+        android:textSize="15dp"
         android:text="Developers"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:textSize="11dp"
+        android:textSize="10dp"
         android:text="Ramesh Bista"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:textSize="11dp"
+        android:textSize="10dp"
+        android:layout_marginBottom="10dp"
         android:text="Suman Ghimire"/>
+ <View
+     android:layout_width="1dp"
+     android:layout_height="40dp"
+     android:layout_gravity="center_horizontal"
+     android:background="@color/colorPrimary"/>
+ <TextView
+     android:layout_marginTop="10dp"
+     android:layout_width="wrap_content"
+     android:layout_height="wrap_content"
+     android:layout_gravity="center_horizontal"
+     android:textColor="@color/colorPrimary"
+     android:textSize="15dp"
+     android:text="Web API"/>
+
+ <TextView
+     android:layout_width="wrap_content"
+     android:layout_height="wrap_content"
+     android:layout_gravity="center_horizontal"
+     android:textSize="10dp"
+     android:layout_marginBottom="15dp"
+     android:text="Niyesh Badal"/>
+
 
 </LinearLayout>
 
