--- a/app/src/main/res/layout/activity_college.xml
+++ b/app/src/main/res/layout/activity_college.xml
@@ -1,66 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#e5e7ea"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.user.educationhunt.UniversityRegistration">
+    android:orientation="vertical"
+    tools:context="com.example.user.educationhunt.College" >
 
-    <LinearLayout
-        android:layout_height="wrap_content"
+    <ListView
+        android:id="@+id/lstCollegeInfo"
         android:layout_width="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
-            android:text="Name:"/>
-
-        <EditText
-            android:id="@+id/register_college_name"
-            android:layout_width="match_parent"
-            android:background="#fff"
-            android:layout_marginBottom="5dp"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
-            android:text="Address:"/>
-
-        <EditText
-            android:id="@+id/register_college_address"
-            android:layout_width="match_parent"
-            android:background="#fff"
-            android:layout_marginBottom="5dp"
-            android:layout_height="wrap_content" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:orientation="horizontal">
-
-            <Spinner
-                android:id="@+id/register_college_district"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_marginRight="10dp"
-                android:layout_height="wrap_content" />
-            <Spinner
-                android:id="@+id/register_college_country"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content" />
-
-        </LinearLayout>
-
-
-    </LinearLayout>
-
-</ScrollView>
+</LinearLayout>
