--- a/app/src/main/res/layout/activity_our_team.xml
+++ b/app/src/main/res/layout/activity_our_team.xml
@@ -1,128 +1,136 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+
+<ScrollView
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
-    tools:context="com.example.user.educationhunt.OurTeam">
-   <TextView
-       android:layout_marginTop="15dp"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:layout_gravity="center_horizontal"
-       android:textColor="@color/colorPrimary"
-       android:textSize="16dp"
-       android:text="SoAni Tech Nepal Pvt.Ltd"/>
+    android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+ <LinearLayout
+     xmlns:tools="http://schemas.android.com/tools"
+     android:layout_width="match_parent"
+     android:layout_height="match_parent"
+     android:paddingBottom="@dimen/activity_vertical_margin"
+     android:paddingLeft="@dimen/activity_horizontal_margin"
+     android:paddingRight="@dimen/activity_horizontal_margin"
+     android:paddingTop="@dimen/activity_vertical_margin"
+     android:orientation="vertical"
+     tools:context="com.example.user.educationhunt.EduHunt">
+  <TextView
+      android:layout_marginTop="15dp"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="center_horizontal"
+      android:textColor="@color/colorPrimary"
+      android:textSize="16dp"
+      android:text="SoAni Tech Nepal Pvt.Ltd"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:textSize="11dp"
-        android:text="Taphalho,Manbhawan"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:textSize="11dp"
-        android:text="Lalitpur,Nepal"
-        android:layout_marginBottom="20dp"/>
+  <TextView
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="center_horizontal"
+      android:textSize="11dp"
+      android:text="Taphalho,Manbhawan"/>
+  <TextView
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="center_horizontal"
+      android:textSize="11dp"
+      android:text="Lalitpur,Nepal"
+      android:layout_marginBottom="20dp"/>
 
-    <View
-        android:layout_width="200dp"
-        android:layout_height="1dp"
-        android:layout_gravity="center_horizontal"
-        android:background="@color/colorPrimary"/>
-    <TextView
-        android:layout_marginTop="30dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:textColor="@color/colorPrimary"
-        android:textSize="15dp"
-        android:text="Project Manager"/>
+  <View
+      android:layout_width="200dp"
+      android:layout_height="1dp"
+      android:layout_gravity="center_horizontal"
+      android:background="@color/colorPrimary"/>
+  <TextView
+      android:layout_marginTop="30dp"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="center_horizontal"
+      android:textColor="@color/colorPrimary"
+      android:textSize="15dp"
+      android:text="Project Manager"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:textSize="10dp"
-        android:layout_marginBottom="10dp"
-        android:text="John S. Chhetri"/>
-    <View
-        android:layout_width="1dp"
-        android:layout_height="40dp"
-        android:layout_gravity="center_horizontal"
-        android:background="@color/colorPrimary"/>
-    <TextView
-        android:layout_marginTop="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:textColor="@color/colorPrimary"
-        android:textSize="15dp"
-        android:text="UI Designer"/>
+  <TextView
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="center_horizontal"
+      android:textSize="10dp"
+      android:layout_marginBottom="10dp"
+      android:text="John S. Chhetri"/>
+  <View
+      android:layout_width="1dp"
+      android:layout_height="40dp"
+      android:layout_gravity="center_horizontal"
+      android:background="@color/colorPrimary"/>
+  <TextView
+      android:layout_marginTop="10dp"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="center_horizontal"
+      android:textColor="@color/colorPrimary"
+      android:textSize="15dp"
+      android:text="UI Designer"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:textSize="10dp"
-        android:layout_marginBottom="10dp"
-        android:text="Priti Sharma"/>
-    <View
-        android:layout_width="1dp"
-        android:layout_height="40dp"
-        android:layout_gravity="center_horizontal"
-        android:background="@color/colorPrimary"/>
-    <TextView
-        android:layout_marginTop="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:textColor="@color/colorPrimary"
-        android:textSize="15dp"
-        android:text="Developers"/>
+  <TextView
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="center_horizontal"
+      android:textSize="10dp"
+      android:layout_marginBottom="10dp"
+      android:text="Priti Sharma"/>
+  <View
+      android:layout_width="1dp"
+      android:layout_height="40dp"
+      android:layout_gravity="center_horizontal"
+      android:background="@color/colorPrimary"/>
+  <TextView
+      android:layout_marginTop="10dp"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="center_horizontal"
+      android:textColor="@color/colorPrimary"
+      android:textSize="15dp"
+      android:text="Developers"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:textSize="10dp"
-        android:text="Ramesh Bista"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:textSize="10dp"
-        android:layout_marginBottom="10dp"
-        android:text="Suman Ghimire"/>
- <View
-     android:layout_width="1dp"
-     android:layout_height="40dp"
-     android:layout_gravity="center_horizontal"
-     android:background="@color/colorPrimary"/>
- <TextView
-     android:layout_marginTop="10dp"
-     android:layout_width="wrap_content"
-     android:layout_height="wrap_content"
-     android:layout_gravity="center_horizontal"
-     android:textColor="@color/colorPrimary"
-     android:textSize="15dp"
-     android:text="Web API"/>
+  <TextView
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="center_horizontal"
+      android:textSize="10dp"
+      android:text="Ramesh Bista"/>
+  <TextView
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="center_horizontal"
+      android:textSize="10dp"
+      android:layout_marginBottom="10dp"
+      android:text="Suman Ghimire"/>
+  <View
+      android:layout_width="1dp"
+      android:layout_height="40dp"
+      android:layout_gravity="center_horizontal"
+      android:background="@color/colorPrimary"/>
+  <TextView
+      android:layout_marginTop="10dp"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="center_horizontal"
+      android:textColor="@color/colorPrimary"
+      android:textSize="15dp"
+      android:text="Web API"/>
 
- <TextView
-     android:layout_width="wrap_content"
-     android:layout_height="wrap_content"
-     android:layout_gravity="center_horizontal"
-     android:textSize="10dp"
-     android:layout_marginBottom="15dp"
-     android:text="Niyesh Badal"/>
+  <TextView
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="center_horizontal"
+      android:textSize="10dp"
+      android:layout_marginBottom="15dp"
+      android:text="Niyesh Badal"/>
 
 
-</LinearLayout>
+ </LinearLayout>
+
+
+</ScrollView>
 
