--- a/app/src/main/res/layout/activity_school_details.xml
+++ b/app/src/main/res/layout/activity_school_details.xml
@@ -46,4 +46,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"  />
+
+    <TextView
+        android:id="@+id/mySchoolName"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </android.support.design.widget.CoordinatorLayout>
+
+
